--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <label>Background color: <input type="color" id="background-color" value="#ffffff"/></label>
             </p>
             <p id="fx-inp">
-                <label>Toggle effects: <input id="fx-toggle" type="checkbox" checked="checked"/></label>
+                <label><input id="fx-toggle" type="checkbox" checked="checked"/> Enable alpha</label>
             </p>
         </section>
         <section id="video-sec">
